force-app/main/default/objects/Delivery_Line_Items__c/Delivery_Line_Items__c.object-meta.xml
<CustomObject>
    <description>Relates a Delivery Schedule to a forecast line</description>
    <label>Delivery Line Item</label>
    <nameField>
        <displayFormat>DL-{000000}</displayFormat>
        <label>Delivery Line Items ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>