force-app/main/default/objects/Delivery_Line_Items__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <formula>Web_Forecast_Line_Item__r.Item__c</formula>
    <label>Item</label>
    <type>Text</type>
</CustomField>