force-app/main/default/objects/Delivery_Line_Items__c/fields/Web_Forecast_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Web_Forecast_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Web Forecast Line Item</label>
    <referenceTo>Web_Forecast_Line_Item__c</referenceTo>
    <relationshipLabel>Delivery Line Items</relationshipLabel>
    <relationshipName>Delivery_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>